wp-content/themes/k1-theme/src/styles/components/_footer.scss
.footer {
	position: relative;
	z-index: 9999;
	.socials {
		--svg-size: 6rem;

		.svg-inline--fa {
			width: var(--svg-size);
			height: var(--svg-size);
		}
	}
}

.footer-nav {
	ul {
		list-style: none;
		margin: 0;
		padding: 0;

		a {
			color: white;
		}
	}
}

